tests/fixtures/invalid/pow_bool_set_float.py
# Cannot call pow() with Bool, Set[int], Float
x = pow(True, {1, 2, 3}, 1.0)
